# gps-laptimer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  find_closest_points.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.prod
.github/workflows/: pages.yml  release.yml
components/: finish_line.h  lap_storage.h  protocol.hpp  serial_commands.h  ublox_gps.h  waveshare_display.h
components/ble_ota/: CMakeLists.txt  ble_ota.cpp  ble_ota.h
components/common/: CMakeLists.txt  app_context.cpp  config.h  types.h
components/dns_server/: dns_server.c
components/geo/: CMakeLists.txt  dead_reckoning.cpp  dead_reckoning.h  geo_utils.cpp  geo_utils.h  gps_filter.cpp  gps_filter.h
components/imu/: CMakeLists.txt  qmi8658c.cpp  qmi8658c.h
components/modes/: CMakeLists.txt  gps_processor.cpp  gps_processor.h  simulation.cpp  simulation.h
components/ota/: CMakeLists.txt  ota_manager.cpp  ota_manager.h
components/rtc/: CMakeLists.txt  pcf85063.cpp  pcf85063.h
components/sd_logger/: CMakeLists.txt  sd_logger.cpp  sd_logger.h
components/sdcard/: CMakeLists.txt  sdcard_manager.cpp  sdcard_manager.h
components/sensor_fusion/: CMakeLists.txt  axis_calibrator.cpp  sensor_fusion.h  speed_kalman.cpp
components/timing/: CMakeLists.txt  delta_calculator.cpp  delta_calculator.h  lap_manager.cpp  lap_manager.h  sector_timing.cpp  sector_timing.h
docs/: README.md
examples/: everland_reference_5283.h  everland_track_data.h
main/: CMakeLists.txt  display_config.cpp  display_config.h  display_hal.cpp  display_hal.h  display_widgets.h  finish_line.cpp  finish_line.h  idf_component.yml  lap_storage.cpp  lap_storage.h  main.cpp  page.h  page_manager.cpp  page_manager.h  serial_commands.cpp  serial_commands.h  ublox_gps.cpp  ublox_gps.h  waveshare_display.cpp  waveshare_display.h
main/pages/: ble_ota_page.cpp  emulation_page.cpp  gps_status_page.cpp  imu_page.cpp  lap_summary_page.cpp  laptimer_page.cpp  mode_select_page.cpp  phone_plate_page.cpp  pre_track_page.cpp  settings_page.cpp  storage_test_page.cpp  transition_page.cpp  transition_page.h  wait_gps_page.cpp
tools/: convert_font_to_lvgl.py  parse_lap.py
web/: index.html  ota.js  style.css
(+40 files in other folders)
