idf_component_register(
    SRCS
        "main.cpp"
        "waveshare_display.cpp"
        "display_config.cpp"
        "page_manager.cpp"
        "pages/transition_page.cpp"
        "pages/phone_plate_page.cpp"
        "pages/settings_page.cpp"
        "pages/ble_ota_page.cpp"
        "pages/wait_gps_page.cpp"
        "pages/mode_select_page.cpp"
        "pages/gps_status_page.cpp"
        "pages/pre_track_page.cpp"
        "pages/laptimer_page.cpp"
        "pages/emulation_page.cpp"
        "ublox_gps.cpp"
        "finish_line.cpp"
        "lap_storage.cpp"
        "serial_commands.cpp"
        "../font/generated/share_tech_mono_24.c"
        "../font/generated/share_tech_mono_32.c"
        "../font/generated/share_tech_mono_56.c"
    INCLUDE_DIRS
        "."
        "../font/generated"
    REQUIRES
        driver
        esp_adc
        esp_timer
        nvs_flash
        spiffs
        esp_lcd
        lvgl
        geo
        track
        timing
        modes
        common
        wifi_portal
        rtc
        imu
        sdcard
        sd_logger
        ota
        ble_ota
        json
        sensor_fusion
)

# Font files need this to find lvgl.h properly
target_compile_definitions(${COMPONENT_LIB} PRIVATE LV_LVGL_H_INCLUDE_SIMPLE)
